--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,12 @@
 body {
     font-family: Arial, sans-serif;
     padding: 20px;
-    background-color: #6374be;
+    /*background-color: #6374be;*/
+    background-image: url(/images/BG.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 .logo-container {
     display: flex;
@@ -15,7 +20,11 @@ body {
 
 h1 {
     text-align: center;
-    color: #000000;
+    color: #ffcc00;
+}
+u {
+    text-align: center;
+    color: #ffcc00;
 }
 
 .container {
@@ -23,6 +32,9 @@ h1 {
     align-items: center;
     justify-content: center;
     margin-bottom: 20px;
+    background-color: #6374be;
+    /* color: #ffffff; */
+    border-radius: 4px;
 }
 
 .input-container {
@@ -103,7 +115,8 @@ p {
 
 .resultadok {
     text-align: center;
-    color: #ffcc00;
+    color: #ffcc00;    
+    
 }
 /* Estilos para los recuadros de las columnas */
 .column-text {
@@ -123,4 +136,52 @@ p {
     padding: 10px;
     margin-bottom: 10px;
     width: 400px;
+}
+
+/*Portada*/
+/*.column-text3 {
+    border: 2px solid #e7e7e7;
+    border-radius: 5px;
+    background-color: #f5f5f5;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+    padding: 10px;
+    margin-bottom: 10px;
+    
+}*/
+
+.column-text3 {
+    background-color: #f5f5f5;
+    border-radius: 10px;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    margin-bottom: 20px;
+    text-align: center;
+  }
+  
+  .column-text3 h1 {
+    font-size: 36px;
+    margin-bottom: 10px;
+  }
+  
+  .column-text3 p {
+    font-size: 18px;
+    margin-bottom: 20px;
+  }
+  
+  button {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #1e11d4;
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+  }
+  
+  button:hover {
+    background-color: #4CAF50;
+  }
+  input:disabled {
+	background-color   : #706e85;
+    color: #ffffff;
 }
